--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -8,7 +8,7 @@
 # brouwser <brouwer@ee-atwork.nl>, 2012
 # brouwser <brouwer@ee-atwork.nl>, 2012-2013
 # Geert Buyse <geert.buyse@chiro.be>, 2015
-# HanV <han.velthuis@home.nl>, 2013-2015
+# HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2011-2012
 # HanV <han.velthuis@home.nl>, 2011
 # Jan Hovenkamp <info@vvactief.nl>, 2014
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-18 13:44+0000\n"
-"Last-Translator: Arnaud De Moyer <arnauddemoyer@gmail.com>\n"
+"PO-Revision-Date: 2016-01-10 17:15+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3330,7 +3330,7 @@ msgstr "Contact informatie"
 
 #: CRM/Contact/Form/Relationship.php
 msgid "You do not have permission to edit relationships for this contact."
-msgstr ""
+msgstr "U mag de relaties van dit contact niet wijzigen."
 
 #: CRM/Contact/Form/Relationship.php
 msgid "Relationships for"
@@ -5824,7 +5824,7 @@ msgstr "%1 moet een geldige website zijn."
 
 #: CRM/Core/BAO/CustomGroup.php
 msgid "Cannot create custom table because %1 is already a core table."
-msgstr ""
+msgstr "Er kan geen specifieke tabel worden aangemaakt omdat %1 een basistabel is."
 
 #: CRM/Core/BAO/CustomGroup.php
 msgid "%1 Questions"
@@ -7835,17 +7835,17 @@ msgstr "De sleutel van deze betaalmethode is niet ingevoerd"
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid "Subscription payment failed - %1"
-msgstr ""
+msgstr "Aanmelding betaling is mislukt - %1"
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid ""
 "Recurring contribution appears to have been re-assigned from id %1 to %2, "
 "continuing with %2."
-msgstr ""
+msgstr "De periodieke betaling lijkt te zijn toegekend van id %1 aan %2, er wordt verder gegaan met %2."
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid "Could not find contributionRecur id: %1"
-msgstr ""
+msgstr "contributionRecur id: %1 niet gevonden"
 
 #: CRM/Core/Payment/BaseIPN.php CRM/Core/Payment/GoogleIPN.php
 msgid "Online Contribution"
@@ -8237,11 +8237,11 @@ msgstr "eWAY De gateway URL van deze betaalmethode is niet ingevuld"
 
 #: CRM/Core/Payment.php
 msgid "No active instances of payment processor %1 were found."
-msgstr ""
+msgstr "Er is geen actieve instantie van betaalmethode %1."
 
 #: CRM/Core/Payment.php
 msgid "No active instances of payment processor '%1' were found."
-msgstr ""
+msgstr "Er is geen actieve instantie van betaalmethode '%1'."
 
 #: CRM/Core/Permission.php CRM/Logging/ReportDetail.php
 #: templates/CRM/common/joomla.tpl templates/CRM/common/print.tpl
@@ -11278,7 +11278,7 @@ msgstr "dit is een interface en het moet niet rechtstreeks worden benaderd"
 msgid ""
 "Timestamps reported by MySQL (eg \"%2\") and PHP (eg \"%3\" ) are "
 "mismatched.<br /><a href=\"%1\">Read more about this warning</a>"
-msgstr ""
+msgstr "Timestamps gemeld door MySQL (bijv. \"%2\") en PHP (bijv. \"%3\" ) komen niet overeen.<br /><a href=\"%1\">Meer lezen over deze waarschuwing</a>"
 
 #: CRM/Utils/Check/Env.php
 msgid "Environment Settings"
@@ -24921,7 +24921,7 @@ msgstr "Profiel Veld"
 
 #: CRM/UF/Form/Field.php
 msgid "You have already added a primary location field of this type: %1"
-msgstr ""
+msgstr "Er is al een primair locatieveld van dit type: %1"
 
 #: CRM/UF/Page/Group.php
 msgid "Use Profile-Listings Mode"
@@ -24931,7 +24931,7 @@ msgstr "Gebruik weergave profiellijsten"
 msgid ""
 "Case type \"%2\" has duplicate XML files (\"%3\" and \"%4\").<br /><a "
 "href=\"%1\">Read more about this warning</a>"
-msgstr ""
+msgstr "Dossiertype \"%2\" heeft meerdere XML-bestanden (\"%3\" en \"%4\").<br /><a href=\"%1\">Lees meer over deze waarschuwing</a>"
 
 #: CRM/Utils/Check/Case.php
 msgid "CiviCase"
@@ -24941,7 +24941,7 @@ msgstr "CiviCase"
 msgid ""
 "Case type \"%2\" corresponds to XML file (\"%3\") The XML file should be "
 "named \"%4\".<br /><a href=\"%1\">Read more about this warning</a>"
-msgstr ""
+msgstr "Dossiertype \"%2\" behoort nu bij XML-bestand (\"%3\"). Dit bestand moet zijn \"%4\".<br /><a href=\"%1\">Lees meer over deze waarschuwing</a>"
 
 #: CRM/Utils/Check/Env.php
 msgid ""
@@ -25827,14 +25827,14 @@ msgstr[1] "%count activiteiten verwijderd."
 #: CRM/Activity/Form/Task/Delete.php
 msgid "1 could not be deleted."
 msgid_plural "%count could not be deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 is niet verwijderd."
+msgstr[1] "%count zijn niet verwijderd."
 
 #: CRM/Activity/Form/Task/RemoveFromTag.php
 msgid "%count activity un-tagged"
 msgid_plural "%count activities un-tagged"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Kenmerk bij %count activiteit verwijderd"
+msgstr[1] "Kenmerk bij %count activiteiten verwijderd"
 
 #: CRM/Activity/Page/AJAX.php CRM/Activity/Selector/Search.php
 msgid "Repeating (%1 of %2)"
@@ -25842,7 +25842,7 @@ msgstr "Herhalend (%1 van %2)"
 
 #: CRM/Contact/BAO/Query.php
 msgid "%1 is not a valid operator"
-msgstr ""
+msgstr "%1 is geen geldige operator"
 
 #: CRM/Contact/BAO/Query.php CRM/Core/SelectValues.php
 msgid "Not Like"
@@ -26717,7 +26717,7 @@ msgid ""
 "you <a href=\"%1\" target=\"_blank\">support CiviCRM by becoming a "
 "member</a> or by <a href=\"%2\" target=\"_blank\">making a donation</a>. ~ "
 "Dave Greenberg, Co-Founder"
-msgstr ""
+msgstr "Het kernteam van CiviCRM kondigt trots de release van versie 4.6 aan, de eerste grote wijziging in 2015. Het bevat natuurlijk verbeteringen voor de grootste open source CRM voor non-profit organisaties wereldwijd. Het kost natuurlijk wel geld om CiviCRM te onderhouden en te verbeteren, zonder de ondersteuning van organisaties als die van u, zijn toekomstige versies misschien niet meer mogelijk. We hopen dat u tevreden bent met deze versie en vragen u om <a href=\\\"%1\\\" target=\\\"_blank\\\">CiviCRM te ondersteunen door lid te worden</a> of met een <a href=\\\"%2\\\" target=\\\"_blank\\\">donatie</a>. ~ Dave Greenberg, mede-oprichter"
 
 #: xml/templates/civicrm_data.tpl
 msgid "PCP owner notifications"
