--- a/po/nl_NL/provinces.po
+++ b/po/nl_NL/provinces.po
@@ -5,7 +5,7 @@
 # Translators:
 # brouwser <brouwer@ee-atwork.nl>, 2013
 # brouwser <brouwer@ee-atwork.nl>, 2012
-# HanV <han.velthuis@home.nl>, 2013-2015
+# HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2012
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
 # Johan Beckers <johan@carecompany.be>, 2013
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-10 15:55+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15857,48 +15857,48 @@ msgstr "Vodice"
 
 msgctxt "province"
 msgid "Abkhazia"
-msgstr ""
+msgstr "Abkhazia"
 
 msgctxt "province"
 msgid "Adjara"
-msgstr ""
+msgstr "Adjara"
 
 msgctxt "province"
 msgid "Tbilisi"
-msgstr ""
+msgstr "Tbilisi"
 
 msgctxt "province"
 msgid "Guria"
-msgstr ""
+msgstr "Guria"
 
 msgctxt "province"
 msgid "Imereti"
-msgstr ""
+msgstr "Imereti"
 
 msgctxt "province"
 msgid "Kakheti"
-msgstr ""
+msgstr "Kakheti"
 
 msgctxt "province"
 msgid "Kvemo Kartli"
-msgstr ""
+msgstr "Kvemo Kartli"
 
 msgctxt "province"
 msgid "Mtskheta-Mtianeti"
-msgstr ""
+msgstr "Mtskheta-Mtianeti"
 
 msgctxt "province"
 msgid "Racha-Lechkhumi and Kvemo Svaneti"
-msgstr ""
+msgstr "Racha-Lechkhumi en Kvemo Svaneti"
 
 msgctxt "province"
 msgid "Samegrelo-Zemo Svaneti"
-msgstr ""
+msgstr "Samegrelo-Zemo Svaneti"
 
 msgctxt "province"
 msgid "Samtskhe-Javakheti"
-msgstr ""
+msgstr "Samtskhe-Javakheti"
 
 msgctxt "province"
 msgid "Shida Kartli"
-msgstr ""
+msgstr "Shida Kartli"
