--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # brouwser <brouwer@ee-atwork.nl>, 2012
-# HanV <han.velthuis@home.nl>, 2013-2015
+# HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012-2013
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-10 16:54+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -189,11 +189,11 @@ msgstr "Er is een fout opgetreden bij het aanmaken van een betaling voor uw even
 
 #: CRM/Event/Cart/Page/AddToCart.php CRM/Event/Form/Registration.php
 msgid "You do not have permission to register for this event"
-msgstr "U bent niet gemachtigd om u in te schrijven voor dit evenement"
+msgstr "U mag u niet inschrijven voor dit evenement"
 
 #: CRM/Event/Cart/Page/AddToCart.php
 msgid "You cannot register for an event you do not have permission to view"
-msgstr "U kunt zich niet opgeven voor een evenement als u geen toestemming heeft om het evenement te bekijken."
+msgstr "U mag u niet aanmelden voor een evenement als u het evenement niet mag bekijken."
 
 #: CRM/Event/Cart/Page/AddToCart.php
 msgid ""
@@ -1074,7 +1074,7 @@ msgstr " (meerdere deelnemers)"
 msgid ""
 "You do not have permission to access this event registration. Contact the "
 "site administrator if you need assistance."
-msgstr "U bent niet gemachtigd om deze evenementinschrijving te benaderen. Neem contact op met de beheerder als u hulp nodig heeft."
+msgstr "U mag deze inschrijving niet bekijken. Neem contact op met de beheerder als u hulp nodig heeft."
 
 #: CRM/Event/Form/Registration/ParticipantConfirm.php
 msgid ""
@@ -1400,7 +1400,7 @@ msgstr "evenementen"
 
 #: CRM/Event/Page/EventInfo.php
 msgid "You do not have permission to view this event"
-msgstr "U bent niet gemachtigd om dit evenement weer te geven."
+msgstr "U mag dit evenement niet weergeven."
 
 #: CRM/Event/Page/EventInfo.php
 msgid ""
