--- a/po/nl_NL/pledge.po
+++ b/po/nl_NL/pledge.po
@@ -3,7 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# HanV <han.velthuis@home.nl>, 2013-2015
+# HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011-2012
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-10 15:52+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -848,11 +848,11 @@ msgstr "Klik op <a %1>Toezegging toevoegen</a> om een nieuwe toezegging van dit 
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Contact ID %1 %2"
-msgstr ""
+msgstr "Contact ID %1 %2"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Pledger Name"
-msgstr ""
+msgstr "Naam Gever"
 
 #: CRM/Pledge/Form/Task/Delete.php
 msgid "%count pledge deleted."
