--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -5,6 +5,7 @@
 # Translators:
 # translatosaurus <accounts@drexler.eu>, 2013
 # translatosaurus <accounts@drexler.eu>, 2012-2013
+# Alain Schaefer <alain.schaefer@gmail.com>, 2016
 # artd <artd@artd.ch>, 2015
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2014
@@ -33,8 +34,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-13 15:06+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2016-01-15 13:55+0000\n"
+"Last-Translator: Alain Schaefer <alain.schaefer@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -54,7 +55,7 @@ msgstr "Der Name dieser Kontaktart existiert bereits in der Datenbank. Der Name 
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Contact type names should not use reserved keywords."
-msgstr ""
+msgstr "Namen von Kontaktarten sollten keine reservierten Schlüsselwörter verwenden."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "Selected contact type has been deleted."
@@ -825,11 +826,11 @@ msgstr "Aktiviere globale, serverweite Sperre für CivMail"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Enable CiviMail to generate Message-ID header"
-msgstr ""
+msgstr "Aktiviere dass CiviMail den Message-ID Header erstellt"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Enable CiviMail to create activities on delivery"
-msgstr ""
+msgstr "Aktiviere, dass CiviMail beim Versand Aktivitäten erstellt"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Disable check for mandatory tokens"
