--- a/po/hu_HU/admin.po
+++ b/po/hu_HU/admin.po
@@ -5,12 +5,12 @@
 # Translators:
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Szabo Attila <atekka@gmail.com>, 2013
-# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2015
+# Zoltán Reizinger <zreizinger@hdsnet.hu>, 2013-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-13 15:45+0000\n"
+"PO-Revision-Date: 2016-01-18 12:52+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -41,7 +41,7 @@ msgstr "Kiválasztott kapcsolat típus törölve."
 msgid ""
 "Selected contact type can not be deleted. Make sure contact type doesn't "
 "have any associated custom data or group."
-msgstr "A kiválasztott kapcsolat típus nem törölhető. Győzódj meg arról hogy ehhez a kapcsolat típushoz nincs társítva semmilyen egyedi adat vagy csoport."
+msgstr "A kiválasztott kapcsolat típus nem törölhető. Győződjön meg arról hogy ehhez a kapcsolat típushoz nincs társítva semmilyen egyedi adat vagy csoport."
 
 #: CRM/Admin/Form/ContactType.php
 msgid "The Contact Type '%1' has been saved."
@@ -4970,7 +4970,7 @@ msgstr "FIGYELMEZTETÉS: Az opció csoportok nagy része programon belül kerül
 
 #: templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "none"
-msgstr "egyik sem"
+msgstr "nincs"
 
 #: templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "Add Option Group"
