--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -12,7 +12,7 @@
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2015
 # pantteri, 2013
 # Ettore Atalan <atalanttore@googlemail.com>, 2015
-# Fabian <schuttenberg@systopia.de>, 2013-2015
+# Fabian <schuttenberg@systopia.de>, 2013-2016
 # gnpma100 <gnpma100@gmail.com>, 2014
 # gnpma100 <gnpma100@gmail.com>, 2014
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
@@ -47,8 +47,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-14 10:36+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2016-01-18 10:08+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -11752,7 +11752,7 @@ msgstr "Sind Sie sicher, dass Sie fortfahren wollen?"
 
 #: js/crm.backbone.js
 msgid "Expected exactly one response"
-msgstr "Es wird wenigstens eine Antwort erwartet"
+msgstr "Es wird genau eine Antwort erwartet"
 
 #: js/jquery/jquery.crmRevisionLink.js
 msgid "Revisions"
