--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -30,7 +30,7 @@
 # Michael <inactive+MiQ@transifex.com>, 2012
 # Michael <inactive+MiQ@transifex.com>, 2012
 # MichaSeidler <info@euroconsults.eu>, 2012
-# Niko Bochan <bochan@systopia.de>, 2014
+# Niko Bochan <bochan@systopia.de>, 2014,2016
 # pantteri, 2013
 # Martin Peth <peth@systopia.de>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -47,8 +47,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-18 10:08+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"PO-Revision-Date: 2016-01-19 17:05+0000\n"
+"Last-Translator: Niko Bochan <bochan@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6120,7 +6120,7 @@ msgstr "Ausloggen"
 #: CRM/Core/BAO/Navigation.php CRM/Logging/ReportDetail.php
 #: xml/templates/civicrm_data.tpl
 msgid "Home"
-msgstr "CiviCRM Home"
+msgstr "Startseite"
 
 #: CRM/Core/BAO/Navigation.php
 msgid "Drupal Menu"
