--- a/po/ca_ES/report.po
+++ b/po/ca_ES/report.po
@@ -4,15 +4,15 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
-# francescbassas <francesc@babu.cat>, 2013-2015
+# francescbassas <francesc@babu.cat>, 2013-2016
 # francescbassas <francesc@babu.cat>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-21 15:01+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1049,7 +1049,7 @@ msgstr "Data de transferència de diner "
 
 #: CRM/Report/Form/Grant/Detail.php
 msgid "Grant Decision Date"
-msgstr "Data de la decisió de Beca "
+msgstr "Data de la decisió de la subvenció "
 
 #: CRM/Report/Form/Grant/Detail.php
 msgid "Grant Report Received"
@@ -1057,7 +1057,7 @@ msgstr "Informe de subvencions rebut "
 
 #: CRM/Report/Form/Grant/Detail.php
 msgid "Application Received Date"
-msgstr "Data de la recepció de la sol·licitud "
+msgstr "Data de recepció de la sol·licitud "
 
 #: CRM/Report/Form/Grant/Detail.php
 msgid "View contact details for this record."
@@ -1098,7 +1098,7 @@ msgstr "Per %1"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "Grant Requests Received"
-msgstr "Sol·licituds de Beca Rebudes"
+msgstr "Sol·licituds de subvencions rebudes"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "Grants Awarded"
@@ -1106,11 +1106,11 @@ msgstr "Beca Concedida "
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "Grant Reports Received"
-msgstr "Reports de Beca Rebuts"
+msgstr "Informe de subvencions rebudes"
 
 #: CRM/Report/Form/Grant/Statistics.php
 msgid "Number of Grants"
-msgstr "Número de beca"
+msgstr "Número de subvencions"
 
 #: CRM/Report/Form/Instance.php
 msgid "You do not have permission to access this report."
