--- a/po/fr_FR/install.po
+++ b/po/fr_FR/install.po
@@ -6,6 +6,7 @@
 # Anaïs V. <anais.vidal1@gmail.com>, 2015
 # Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
 # Barnicol <g.barnicol@gmail.com>, 2015
+# Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # Caroline Servissolle <cservissolle13207@gmail.com>, 2015
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Mathieu Lutfy <mathieu@bidon.ca>, 2014-2015
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:24-0500\n"
-"PO-Revision-Date: 2016-01-17 14:52+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-02-04 10:15+0000\n"
+"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -125,7 +126,7 @@ msgstr "MySQL %1"
 
 #: install/index.php
 msgid "Is auto_increment_increment set to 1"
-msgstr ""
+msgstr "Est-ce-que auto_increment_increment est mis à 1"
 
 #: install/index.php
 msgid ""
@@ -322,11 +323,11 @@ msgstr ""
 
 #: install/index.php
 msgid "MySQL server does have InnoDB support"
-msgstr ""
+msgstr "Le serveur MySQL ne reconnaît pas InnoDB"
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no"
-msgstr ""
+msgstr "Impossible de déterminer si MySQL reconnaît InnoDB. On suppose que non."
 
 #: install/index.php
 msgid "Could not login to the database."
@@ -338,7 +339,7 @@ msgstr "N'a pas pu choisir la base de donnée."
 
 #: install/index.php
 msgid "Could not create a temp table."
-msgstr ""
+msgstr "Impossible de créer une table temporaire."
 
 #: install/index.php
 msgid "Could not create a table in the database."
@@ -354,11 +355,11 @@ msgstr "N'a pas pu se connecter au serveur de la base de données"
 
 #: install/index.php
 msgid "Could not obtain a write lock for the database table."
-msgstr ""
+msgstr "Impossible de verrouiller la table en écriture."
 
 #: install/index.php
 msgid "Could not release the lock for the database table."
-msgstr ""
+msgstr "Impossible d'ouvrir la table en écriture."
 
 #: install/index.php
 msgid "Could not query database server variables."
