--- a/po/fr_FR/pcp.po
+++ b/po/fr_FR/pcp.po
@@ -5,6 +5,7 @@
 # Translators:
 # Barnicol <g.barnicol@gmail.com>, 2015
 # SR71 <ben.alard@gmail.com>, 2012
+# Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-02 15:49+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-02-04 10:00+0000\n"
+"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -74,13 +75,13 @@ msgstr "Texte du lien « Créer une page de campagne personnelle »"
 msgid ""
 "This event registration is being made thanks to effort of "
 "<strong>%1</strong>, who supports our campaign. "
-msgstr ""
+msgstr "Cette inscription est faite grâce à <strong>%1</strong> qui soutient notre campagne. "
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
 "This contribution is being made thanks to effort of <strong>%1</strong>, who"
 " supports our campaign. "
-msgstr ""
+msgstr "Cette contribution a été reçu grâce aux efforts de <strong>%1</stong> qui soutient notre campagne."
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Show my support in the public honor roll"
