--- a/po/fr_FR/mailing.po
+++ b/po/fr_FR/mailing.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # SR71 <ben.alard@gmail.com>, 2012
+# Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # matthias de mauroy <m.mauroy@cyim.com>, 2016
 # Peter <webmaster@lebouclier.com>, 2016
@@ -19,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-03 14:57+0000\n"
-"Last-Translator: matthias de mauroy <m.mauroy@cyim.com>\n"
+"PO-Revision-Date: 2016-02-04 09:37+0000\n"
+"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1466,71 +1467,71 @@ msgstr "Message SMS"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component ID"
-msgstr ""
+msgstr "ID du composant de publipostage"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component Type"
-msgstr ""
+msgstr "Type de composant de publipostage"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component Body HTML"
-msgstr ""
+msgstr "Corps HTML du composant de publipostage"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component is Default?"
-msgstr ""
+msgstr "Est-ce le composant de publipostage par défaut ?"
 
 #: CRM/Mailing/DAO/Component.php
 msgid "Mailing Component Is Active?"
-msgstr ""
+msgstr "Est-ce que le composant de publipostage est activé ?"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing ID"
-msgstr ""
+msgstr "ID du mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Domain"
-msgstr ""
+msgstr "Domaine du publipostage"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Reply"
-msgstr ""
+msgstr "Répondre au mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Unsubscribe"
-msgstr ""
+msgstr "Se désabonner du mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Resubscribe"
-msgstr ""
+msgstr "Se réabonner au mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Opt Out"
-msgstr ""
+msgstr "Refuser le mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Name"
-msgstr ""
+msgstr "Nom de l’émetteur du mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing From Email"
-msgstr ""
+msgstr "Courriel de l'émetteur du mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Track Mailing?"
-msgstr ""
+msgstr "Suivre le mailing ?"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Completed"
-msgstr ""
+msgstr "Mailing terminé"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Message Template"
-msgstr ""
+msgstr "Modèle du message du mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Creator"
-msgstr ""
+msgstr "Créateur du mailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Approved By"
@@ -1538,19 +1539,19 @@ msgstr "Approuvé par"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Is Mailing Archived?"
-msgstr ""
+msgstr "Le mailing doit-il être archivé ?"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Campaign"
-msgstr ""
+msgstr "Campagne d'emailing"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "No Duplicate emails?"
-msgstr ""
+msgstr "Il n'y a pas de d'adresses courriels en double ?"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing SMS Provider"
-msgstr ""
+msgstr "Fournisseur Service d'envoi par SMS"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Hash"
