--- a/po/fr_FR/provinces.po
+++ b/po/fr_FR/provinces.po
@@ -5,6 +5,7 @@
 # Translators:
 # Barnicol <g.barnicol@gmail.com>, 2015
 # Brice Lacomette <brice.lacomette@laposte.net>, 2015
+# Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2013
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Mathieu Lutfy <mathieu@bidon.ca>, 2012-2013,2015
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-26 20:54+0000\n"
-"Last-Translator: Peter <webmaster@lebouclier.com>\n"
+"PO-Revision-Date: 2016-02-04 09:57+0000\n"
+"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -15559,51 +15560,51 @@ msgstr "Trbovlje"
 
 msgctxt "province"
 msgid "Tržič"
-msgstr "Tržič"
+msgstr "Trzic"
 
 msgctxt "province"
 msgid "Turnišče"
-msgstr "Turnišče"
+msgstr "Turnisce"
 
 msgctxt "province"
 msgid "Velike Lašče"
-msgstr "Velike Lašče"
+msgstr "Velike Lasce"
 
 msgctxt "province"
 msgid "Veržej"
-msgstr "Veržej"
+msgstr "Verzej"
 
 msgctxt "province"
 msgid "Zavrč"
-msgstr "Zavrč"
+msgstr "Zavrc"
 
 msgctxt "province"
 msgid "Zreče"
-msgstr "Zreče"
+msgstr "Zrece"
 
 msgctxt "province"
 msgid "Žalec"
-msgstr "Žalec"
+msgstr "Zalec"
 
 msgctxt "province"
 msgid "Železniki"
-msgstr "Železniki"
+msgstr "Zelezniki"
 
 msgctxt "province"
 msgid "Žetale"
-msgstr "Žetale"
+msgstr "Zetale"
 
 msgctxt "province"
 msgid "Žiri"
-msgstr "Žiri"
+msgstr "Ziri"
 
 msgctxt "province"
 msgid "Žirovnica"
-msgstr "Žirovnica"
+msgstr "Zirovnica"
 
 msgctxt "province"
 msgid "Žužemberk"
-msgstr "Žužemberk"
+msgstr "Zuzemberk"
 
 msgctxt "province"
 msgid "Kalimantan Tengah"
@@ -15623,7 +15624,7 @@ msgstr "Ankaran"
 
 msgctxt "province"
 msgid "Apače"
-msgstr "Apače"
+msgstr "Apace"
 
 msgctxt "province"
 msgid "Cirkulane"
@@ -15663,7 +15664,7 @@ msgstr "Oplotnica"
 
 msgctxt "province"
 msgid "Ormož"
-msgstr "Ormož"
+msgstr "Ormoz"
 
 msgctxt "province"
 msgid "Osilnica"
@@ -15691,31 +15692,31 @@ msgstr "Podlehnik"
 
 msgctxt "province"
 msgid "Podvelka"
-msgstr ""
+msgstr "Podvelka"
 
 msgctxt "province"
 msgid "Poljčane"
-msgstr ""
+msgstr "Poljčane"
 
 msgctxt "province"
 msgid "Polzela"
-msgstr ""
+msgstr "Polzela"
 
 msgctxt "province"
 msgid "Postojna"
-msgstr ""
+msgstr "Postojna"
 
 msgctxt "province"
 msgid "Prebold"
-msgstr ""
+msgstr "Prebold"
 
 msgctxt "province"
 msgid "Preddvor"
-msgstr ""
+msgstr "Preddvor"
 
 msgctxt "province"
 msgid "Prevalje"
-msgstr ""
+msgstr "Prevalje"
 
 msgctxt "province"
 msgid "Ptuj"
@@ -15723,23 +15724,23 @@ msgstr "Ptuj"
 
 msgctxt "province"
 msgid "Puconci"
-msgstr ""
+msgstr "Puconci"
 
 msgctxt "province"
 msgid "Rače-Fram"
-msgstr ""
+msgstr "Race-Fram"
 
 msgctxt "province"
 msgid "Radeče"
-msgstr ""
+msgstr "Radece"
 
 msgctxt "province"
 msgid "Radenci"
-msgstr ""
+msgstr "Radenci"
 
 msgctxt "province"
 msgid "Radlje ob Dravi"
-msgstr ""
+msgstr "Radlje ob Dravi"
 
 msgctxt "province"
 msgid "Radovljica"
@@ -15747,99 +15748,99 @@ msgstr "Radovljica"
 
 msgctxt "province"
 msgid "Ravne na Koroškem"
-msgstr ""
+msgstr "Ravne na Koroskem"
 
 msgctxt "province"
 msgid "Razkrižje"
-msgstr ""
+msgstr "Razkrizje"
 
 msgctxt "province"
 msgid "Rečica ob Savinji"
-msgstr ""
+msgstr "Recica ob Savinji"
 
 msgctxt "province"
 msgid "Renče-Vogrsko"
-msgstr ""
+msgstr "Rence-Vogrsko"
 
 msgctxt "province"
 msgid "Ribnica"
-msgstr ""
+msgstr "Ribnica"
 
 msgctxt "province"
 msgid "Ribnica na Pohorju"
-msgstr ""
+msgstr "Ribnica na Pohorju"
 
 msgctxt "province"
 msgid "Rogaška Slatina"
-msgstr ""
+msgstr "Rogaska Slatina"
 
 msgctxt "province"
 msgid "Rogašovci"
-msgstr ""
+msgstr "Rogasovci"
 
 msgctxt "province"
 msgid "Rogatec"
-msgstr ""
+msgstr "Rogatec"
 
 msgctxt "province"
 msgid "Ruše"
-msgstr ""
+msgstr "Ruse"
 
 msgctxt "province"
 msgid "Selnica ob Dravi"
-msgstr ""
+msgstr "Selnica ob Dravi"
 
 msgctxt "province"
 msgid "Semič"
-msgstr ""
+msgstr "Semic"
 
 msgctxt "province"
 msgid "Šentrupert"
-msgstr ""
+msgstr "Sentrupert"
 
 msgctxt "province"
 msgid "Sevnica"
-msgstr ""
+msgstr "Sevnica"
 
 msgctxt "province"
 msgid "Sežana"
-msgstr ""
+msgstr "Sezana"
 
 msgctxt "province"
 msgid "Slovenj Gradec"
-msgstr ""
+msgstr "Slovenj Gradec"
 
 msgctxt "province"
 msgid "Slovenska Bistrica"
-msgstr ""
+msgstr "Slovenska Bistrica"
 
 msgctxt "province"
 msgid "Slovenske Konjice"
-msgstr ""
+msgstr "Slovenske Konjice"
 
 msgctxt "province"
 msgid "Šmarješke Toplice"
-msgstr ""
+msgstr "Smarjeske Toplice"
 
 msgctxt "province"
 msgid "Sodražica"
-msgstr ""
+msgstr "Sodrazica"
 
 msgctxt "province"
 msgid "Solčava"
-msgstr ""
+msgstr "Solcava"
 
 msgctxt "province"
 msgid "Središče ob Dravi"
-msgstr ""
+msgstr "Sredisce ob Dravi"
 
 msgctxt "province"
 msgid "Starše"
-msgstr "Starše"
+msgstr "Starse"
 
 msgctxt "province"
 msgid "Straža"
-msgstr ""
+msgstr "Straza"
 
 msgctxt "province"
 msgid "Sveta Trojica v Slovenskih goricah"
@@ -15851,7 +15852,7 @@ msgstr "Sveti Jurij v Slovenskih goricah"
 
 msgctxt "province"
 msgid "Sveti Tomaž"
-msgstr "Sveti Tomaž"
+msgstr "Sveti Tomaz"
 
 msgctxt "province"
 msgid "Vodice"
