--- a/po/fr_FR/grant.po
+++ b/po/fr_FR/grant.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
+# Bruno Verrier <bruno.verrier@worldonline.fr>, 2016
 # Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -12,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-13 15:39+0000\n"
-"Last-Translator: Baptiste Bisson <bbisson.baptiste@gmail.com>\n"
+"PO-Revision-Date: 2016-02-04 10:21+0000\n"
+"Last-Translator: Bruno Verrier <bruno.verrier@worldonline.fr>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -320,17 +321,17 @@ msgstr "Candidat"
 
 #: CRM/Grant/Form/Task/Update.php
 msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr ""
+msgstr "Subvention(s) mise(s) à jour : %1 (Nombre total sélectionné: %2)"
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr ""
+msgstr "Cliquez <a %1>Nouvelle subvention</a> afin d'enregistrer une subvention pour ce contact."
 
 #: CRM/Grant/Form/Task/Delete.php
 msgid "%count grant deleted."
 msgid_plural "%count grants deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%count subventions ont été supprimés."
+msgstr[1] "%count subventions ont été supprimés."
 
 #: CRM/Grant/Info.php
 msgid "access CiviGrant"
@@ -342,11 +343,11 @@ msgstr "Voir toutes les subventions"
 
 #: CRM/Grant/Info.php
 msgid "edit grants"
-msgstr ""
+msgstr "Modifier les subventions"
 
 #: CRM/Grant/Info.php
 msgid "Create and update grants"
-msgstr ""
+msgstr "Créer et mettre à jour les subventions"
 
 #: CRM/Grant/Info.php
 msgid "delete in CiviGrant"
@@ -354,12 +355,12 @@ msgstr "supprimer dans CiviGrant"
 
 #: CRM/Grant/Info.php
 msgid "Delete grants"
-msgstr ""
+msgstr "Supprimer les subventions"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Status(s)"
-msgstr ""
+msgstr "Statut(s) de la subvention"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Type(s)"
-msgstr ""
+msgstr "Type(s) de subvention"
