--- a/po/he_IL/drupal-civicrm.po
+++ b/po/he_IL/drupal-civicrm.po
@@ -9,9 +9,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-03-13 21:28+0000\n"
+"PO-Revision-Date: 2016-02-05 10:00+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
-"Language-Team: Hebrew (http://www.transifex.com/projects/p/civicrm/language/he/)\n"
+"Language-Team: Hebrew (http://www.transifex.com/civicrm/civicrm/language/he/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1407,7 +1407,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Recurring Contribution ID"
-msgstr ""
+msgstr "מזהה תרומה חוזרת"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The numeric ID of the  Recurring Contribution"
